# tessera

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tessera_2600/: checker.py  config.py  generator.py  tessera_cli.py  utils.py
src/tessera_2600/core/: __init__.py  adapters.py  declarative_service.py  descriptor_models.py  models.py  plugin_api.py  proxy_manager.py  threading_manager.py  work_distributor.py
src/tessera_2600/operations/: __init__.py  checker_coordinator.py  results_handler.py  variation_generator.py
src/tessera_2600/services/: __init__.py  utils.py
src/tessera_2600/services/descriptors/: instagram.json  seznamcz.json  seznamcz.yaml
src/tessera_2600/services/signers/: __init__.py  instagram.py
tests/: test_declarative_service.py  test_descriptors_selection.py  test_generator.py  test_plugin_api.py  test_utils.py
